# onboarding-mcp

./: .gitignore  README.md  pyproject.toml
src/: config.py  embedder.py  llm.py  requirements.txt  search.py  server.py
