[project]
name = "mcp-codeguide"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "faiss-cpu>=1.10.0",
    "langchain>=0.3.25",
    "langchain-community>=0.3.23",
    "langchain-core>=0.3.59",
    "langchain-ollama>=0.3.2",
    "langchain-text-splitters>=0.3.8",
    "mcp[cli]>=1.6.0",
    "ollama>=0.4.8",
    "sentence-transformers>=4.1.0",
]
